# parsecdb

./: .gitignore  Cargo.toml  README.md
benches/: math_benches.rs
src/: lib.rs  main.rs
src/api/: protocol.rs  server.rs
src/core/: error.rs  types.rs
src/index/: flat.rs  hnsw.rs  mod.rs
src/math/: distance.rs  mod.rs  simd.rs
src/storage/: buffer.rs  mod.rs  wal.rs
tests/: engine_test.rs
