[package]
name = "parsecdb"
version = "0.1.0"
edition = "2024"
authors = ["Bishesh Shrestha"]
description = "A high performance, from-scratch vector database"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
bincode = "1.3"
criterion = "0.5"
rand = "0.8"
tokio = { version = "1.52.3", features = ["full"] }
axum = "0.8.9"
serde_json = "1.0.150"
[[bench]]
name = "math_benches"
harness = false
